# vision-paper-genealogy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: data.json  index.html  stats.json
domains/: 2d_object_detection.yaml  3d_object_detection.yaml  depth_completion.yaml  diffusion_models.yaml  end_to_end_autonomous_driving.yaml  grasp_planning.yaml  image_matching.yaml  imitation_learning.yaml  large_language_models.yaml  legged_robots.yaml  lidar_odometry_slam.yaml  medical_robotics.yaml  motion_planning.yaml  neural_radiance_fields.yaml  object_tracking.yaml  optical_flow.yaml  point_cloud_denoising.yaml  point_cloud_scene_flow.yaml  reinforcement_learning.yaml  robot_control.yaml  robot_middleware.yaml  robot_simulation.yaml  semantic_segmentation.yaml  vision_backbone.yaml  vision_language_models.yaml  visual_place_recognition.yaml  visual_slam.yaml  world_models.yaml
robotics_paper_genealogy/: __init__.py  cli.py  models.py
robotics_paper_genealogy/graph/: builder.py
robotics_paper_genealogy/viz/: tree.py  web.py
robotics_technology_genealogy/: __init__.py  cli.py  models.py
robotics_technology_genealogy/graph/: builder.py
robotics_technology_genealogy/viz/: tree.py  web.py
scripts/: build_site.py  import_awesome.py
tests/: test_domains.py
vision_paper_genealogy/: __init__.py  cli.py
vision_paper_genealogy/graph/: builder.py
vision_paper_genealogy/viz/: tree.py
web/: app.py
