[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotics-technology-genealogy"
version = "0.2.0"
description = "Interactive genealogy tree of 800+ Robotics & AI technologies across 28 domains"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "rsasaki0109" },
]
keywords = ["robotics", "computer-vision", "research", "genealogy", "paper", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://rsasaki0109.github.io/robotics-technology-genealogy/"
Repository = "https://github.com/rsasaki0109/robotics-technology-genealogy"
Documentation = "https://github.com/rsasaki0109/robotics-technology-genealogy#readme"
Demo = "https://rsasaki0109.github.io/robotics-technology-genealogy/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
web = [
    "streamlit>=1.30.0",
    "pyvis>=0.3.0",
]

[project.scripts]
robotics-technology-genealogy = "robotics_technology_genealogy.cli:app"

[tool.pytest.ini_options]
addopts = "-p no:launch_testing -p no:launch_testing_ros2 -p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_xmllint -p no:ament_lint"

[tool.ruff]
line-length = 100
